# romea-localisation-odo-plugin

./: CMakeLists.txt  README.md  package.xml  romea_localisation_odo.repos  romea_localisation_odo_plugin.repos
include/romea_localisation_odo/: odo_localisation_plugin.hpp  odo_localisation_plugin_parameters.hpp  visibility_control.h
include/romea_localisation_odo_plugin/: odo_localisation_plugin.hpp  odo_localisation_plugin_parameters.hpp  visibility_control.h
launch/: odo_plugin.launch.py
src/: odo_localisation_plugin.cpp  odo_localisation_plugin.hpp  odo_localisation_plugin_node.cpp  odo_localisation_plugin_parameters.cpp
